# zinc

./: .clang-format  .gitignore  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt
include/zinc/: zinc.h
include/zinc/containers/: containers.h  devec.h  graph.h  hash_map.h  hash_set.h  ring_deque.h
include/zinc/containers/detail/: map_traits.h  raw_hash_map.h  raw_hash_set.h  set_traits.h  slot_traits.h  small_adapter.h
include/zinc/data/: array_tree.h  data.h  double_ended_vec.h  hash_map.h  hash_set.h  ring_deque.h  rope.h
include/zinc/data/detail/: map_traits.h  raw_hash_map.h  raw_hash_set.h  set_traits.h  slot_traits.h  small_adapter.h
include/zinc/io/: concepts.h  console.h  file.h  io.h
include/zinc/types/: aliases.h  allocators.h  concepts.h  customization.h  functors.h  iterators.h  pointers.h  storage.h  strings.h  types.h
include/zinc/types/functors/: equal_to.h  hash.h
include/zinc/types/iterators/: enumerate.h  range.h
include/zinc/util/: defer.h  finally.h  options.h  uninitialized.h  util.h
include/zinc/util/options/: args.h  parser.h
src/: CMakeLists.txt  main.cc  utils.h
tests/: CMakeLists.txt  main.cc
tests/support/: support.h
tests/tests/: sanity.cc
